--- a/src/app/tela-reservas/tela-reservas.component.scss
+++ b/src/app/tela-reservas/tela-reservas.component.scss
@@ -24,9 +24,11 @@
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
+  padding: 2% 6%;
+  background: rgba(255, 255, 255, 0.7);
+  margin: 0 7%;
 }
 
 .sala-button {
   flex-basis: calc(20% - 16px);
 }
-
