--- a/src/app/tela-calendario/tela-calendario.component.html
+++ b/src/app/tela-calendario/tela-calendario.component.html
@@ -25,13 +25,24 @@
     </mat-toolbar>
     
     <div class="calendario-personalizado">
-        <mat-calendar [dateClass]="diaClassFunction" (selectedChange)="onClickDia($event)"></mat-calendar>
+        <mat-calendar [dateFilter]="dateFilter" (selectedChange)="onClickDia($event)"></mat-calendar>
     </div>
-    
-    <div>
-        <h2>Dias Selecionados:</h2>
-        <ul>
-            <li *ngFor="let selectedDate of diasSelecionados">{{ selectedDate | date }}</li>
-        </ul>
-    </div>
-    
+
+    <mat-form-field class="date-range">
+        <mat-label>Selecione um periodo</mat-label>
+        <mat-date-range-input [rangePicker]="rangePicker" [dateFilter]="dateFilter">
+          <input matStartDate placeholder="Start date">
+          <input matEndDate placeholder="End date">
+        </mat-date-range-input>
+        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="rangePicker"></mat-datepicker-toggle>
+        <mat-date-range-picker #rangePicker>
+          <mat-date-range-picker-actions>
+            <button mat-button matDateRangePickerCancel>Cancel</button>
+            <button mat-raised-button color="primary" matDateRangePickerApply>Apply</button>
+          </mat-date-range-picker-actions>
+        </mat-date-range-picker>
+      </mat-form-field>
+      
+      <button (click)="saveDate()" class="saveButton">SALVAR</button>
+      
