--- a/src/app/tela-calendario/tela-calendario.component.scss
+++ b/src/app/tela-calendario/tela-calendario.component.scss
@@ -27,3 +27,27 @@
   border-radius: 5px;
   overflow: hidden; 
 }
+
+.dia-desabilitado {
+  pointer-events: none;
+  /* Outros estilos de desabilitação, se necessário */
+}
+
+.date-range{
+  margin-left: 1cm;
+}
+
+.saveButton{
+  float: right;
+  border-radius: 5px;
+  font-family:monospace;
+  font-size: 16px;
+  padding-left: 2.5cm;
+  padding-right: 2.5cm;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  margin-right: 1cm;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
