--- a/src/app/tela-calendario/tela-calendario.component.html
+++ b/src/app/tela-calendario/tela-calendario.component.html
@@ -45,4 +45,12 @@
       </mat-form-field>
       
       <button (click)="saveDate()" class="saveButton">SALVAR</button>
+
+      <br>
+    <div class="calendario-personalizado">
+        <h2>Dias Selecionados:</h2>
+        <ul>
+            <li *ngFor="let selectedDate of diasSelecionados">{{ selectedDate | date }}</li>
+        </ul>
+    </div>
       
