--- a/src/app/tela-calendario/tela-calendario.component.scss
+++ b/src/app/tela-calendario/tela-calendario.component.scss
@@ -26,7 +26,7 @@
   border: 1px solid rgb(0, 0, 0);
   border-radius: 5px;
   overflow: hidden; 
-  margin-right: 9cm;
+  margin-right: 1cm;
   padding-right: 10cm;
   float: right;
 }
@@ -64,4 +64,11 @@ h1{
   background-color: black;
   color: white;
   cursor: pointer;
+  float: right;
+  margin-right: 1cm;
+  margin-bottom: 20px;
+}
+
+.insertData{
+  width: 20cm;
 }
