--- a/src/app/tela-reservas/tela-reservas.component.html
+++ b/src/app/tela-reservas/tela-reservas.component.html
@@ -22,6 +22,7 @@
 </mat-toolbar>
 
 <div class="demo-button-container">
-    <button mat-raised-button (click)="addData()">Add data</button>
-    <button (click)="removeData()">Remove data</button>
+    <button mat-raised-button (click)="addData()" class="demo-button">Add data</button>
+    <button mat-raised-button (click)="removeData()" class="demo-button">Remove data</button>
+    <button mat-raised-button (click)="seeData()" class="demo-button">See data</button>
 </div>
