--- a/src/app/tela-inicial/tela-inicial.component.html
+++ b/src/app/tela-inicial/tela-inicial.component.html
@@ -3,7 +3,7 @@
     <mat-icon>menu</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
-    <button (click)="openDialog()" mat-menu-item>
+    <button (click)="openLoginSignUp()" mat-menu-item>
       <mat-icon>dialpad</mat-icon>
       <span>Cadastro/Login</span>
     </button>
@@ -14,6 +14,10 @@
     <button mat-menu-item disabled>
       <mat-icon>notifications_off</mat-icon>
       <span>Sobre</span>
+    </button>
+    <button (click)="openReservas()" mat-menu-item>
+      <mat-icon>dialpad</mat-icon>
+      <span>Cadastro/Login</span>
     </button>
   </mat-menu>
 
@@ -26,7 +30,7 @@
     <p>
       Organização Acadêmica Inspirada por Heimdall.
       </p>
-      <button mat-raised-button color="primary" (click)="openDialog()">Tente agora!</button>
+      <button mat-raised-button color="primary" (click)="openLoginSignUp()">Tente agora!</button>
   </div>
   <div class="top-box">
 
