--- a/src/app/tela-inicial/tela-inicial.component.html
+++ b/src/app/tela-inicial/tela-inicial.component.html
@@ -16,8 +16,8 @@
       <span>Sobre</span>
     </button>
     <button (click)="openReservas()" mat-menu-item>
-      <mat-icon>dialpad</mat-icon>
-      <span>Cadastro/Login</span>
+      <mat-icon>event</mat-icon>
+      <span>Reservas</span>
     </button>
   </mat-menu>
 
