--- a/src/app/tela-reservas/tela-reservas.component.html
+++ b/src/app/tela-reservas/tela-reservas.component.html
@@ -1,5 +1,10 @@
-<div class="demo-button-container">
-    <button mat-raised-button (click)="addData()" class="demo-button">Add data</button>
-    <button mat-raised-button (click)="removeData()" class="demo-button">Remove data</button>
-    <button mat-raised-button (click)="seeData()" class="demo-button">See data</button>
+<div class="button-container">
+  <div class="reservas-button">
+    <h1 style="color: red;margin: 0.5cm;">Escolha alguma das opções abaixo:</h1>
+    <button mat-raised-button (click)="addData()" class="demo-button">FAZER NOVAS RESERVAS</button>
+    <br>
+    <button mat-raised-button (click)="removeData()" class="demo-button">DELETAR RESERVAS</button>
+    <br>
+    <button mat-raised-button (click)="seeData()" class="demo-button">VER RESERVAS</button>
+  </div>
 </div>
