--- a/src/app/tela-reservas/tela-reservas.component.scss
+++ b/src/app/tela-reservas/tela-reservas.component.scss
@@ -1,7 +1,14 @@
-.demo-button-container{
-  position: absolute;
-  margin-left: 2cm;
+.demo-button {
+  margin: 1cm;
 }
-.demo-button + .demo-button {
-  margin-left: 8px;
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.reservas-button{
+  background: #ffd740de;
 }
