--- a/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.scss
+++ b/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.scss
@@ -10,7 +10,7 @@
 .logo-central {
   width: 50px;
   height: 50px;
-  background-image: url(../../assets/images/heimdall.logo.png);
+  background-image: url(/src/assets/images/heimdall.logo.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
