--- a/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.html
+++ b/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.html
@@ -1,29 +1,29 @@
 <mat-toolbar>
-    <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>menu</mat-icon>
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button (click)="openLoginSignUp()" mat-menu-item>
+      <mat-icon>dialpad</mat-icon>
+      <span>Cadastro/Login</span>
     </button>
-    <div class="logo-central"></div>
-    <mat-menu #menu="matMenu">
-      <button (click)="redirectProfile()" mat-menu-item>
-        <mat-icon> account_circle </mat-icon>
-        <span>Perfil</span>
-      </button>
-      <button mat-menu-item disabled>
-        <mat-icon>apartment</mat-icon>
-        <span>Instituição</span>
-      </button>
-      <button mat-menu-item disabled>
-        <mat-icon>school</mat-icon>
-        <span>Professores</span>
-      </button>
-      <button (click)="redirectReserve()" mat-menu-item>
-        <mat-icon>meeting_room</mat-icon>
-        <span>Reservas</span>
-      </button>
-    </mat-menu>
-      <span class="tituloH">HEIMDALL</span>
-</mat-toolbar>
+    <button mat-menu-item disabled>
+      <mat-icon>voicemail</mat-icon>
+      <span>Mapa do Site</span>
+    </button>
+    <button mat-menu-item disabled>
+      <mat-icon>notifications_off</mat-icon>
+      <span>Sobre</span>
+    </button>
+    <button (click)="openReservas()" mat-menu-item>
+      <mat-icon>event</mat-icon>
+      <span>Reservas</span>
+    </button>
+  </mat-menu>
 
+  <span class="tituloH">HEIMDALL</span>
+
+</mat-toolbar>
 <h1>RESERVA DE SALAS</h1>
 
 <h3 style="color: red; text-align: center;">Os dias desabilitados não estarão disponíveis apenas no horário escolhido, caso mude o horario,
