--- a/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.html
+++ b/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.html
@@ -1,24 +1,28 @@
 <mat-toolbar>
-    <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>menu</mat-icon>
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button (click)="openLoginSignUp()" mat-menu-item>
+      <mat-icon>dialpad</mat-icon>
+      <span>Cadastro/Login</span>
     </button>
-    <mat-menu #menu="matMenu">
-      <button (click)="openDialog()" mat-menu-item>
-        <mat-icon>dialpad</mat-icon>
-        <span>Cadastro/Login</span>
-      </button>
-      <button mat-menu-item disabled>
-        <mat-icon>voicemail</mat-icon>
-        <span>Mapa do Site</span>
-      </button>
-      <button mat-menu-item disabled>
-        <mat-icon>notifications_off</mat-icon>
-        <span>Sobre</span>
-      </button>
-    </mat-menu>
-  
-    <span class="tituloH">HEIMDALL</span>
-  
+    <button mat-menu-item disabled>
+      <mat-icon>voicemail</mat-icon>
+      <span>Mapa do Site</span>
+    </button>
+    <button mat-menu-item disabled>
+      <mat-icon>notifications_off</mat-icon>
+      <span>Sobre</span>
+    </button>
+    <button (click)="openReservas()" mat-menu-item>
+      <mat-icon>event</mat-icon>
+      <span>Reservas</span>
+    </button>
+  </mat-menu>
+
+  <span class="tituloH">HEIMDALL</span>
+
 </mat-toolbar>
 
 <div class="demo-button-container">
