--- a/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.html
+++ b/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.html
@@ -1,4 +1,8 @@
 <mat-toolbar>
+  <button mat-icon-button (click)="openHome()">
+    <mat-icon style="float: right;">home</mat-icon>
+  </button>
+  
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon>
   </button>
