--- a/src/app/tela-reservas/tela-deletar-reservas/tela-deletar-reservas.component.scss
+++ b/src/app/tela-reservas/tela-deletar-reservas/tela-deletar-reservas.component.scss
@@ -19,3 +19,17 @@
   .tituloH {
     font-size: 2em;
   }
+  
+  h1{
+    text-align: center;
+    margin: 1cm;
+  }
+  
+  .insertData{
+    width: 20cm;
+    margin-left: 1cm;
+  }
+  
+  .boxSize{
+    width: 33%;
+  }
