--- a/src/app/tela-reservas/tela-reservas.component.html
+++ b/src/app/tela-reservas/tela-reservas.component.html
@@ -6,5 +6,7 @@
     <button mat-raised-button (click)="removeData()" class="demo-button">DELETAR RESERVAS</button>
     <br>
     <button mat-raised-button (click)="seeData()" class="demo-button">VER RESERVAS</button>
+    <br>
+    <button mat-raised-button (click)="permissionData()" class="demo-button">PERMISSÃO DE RESERVAS</button>
   </div>
 </div>
