--- a/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.html
+++ b/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.html
@@ -28,3 +28,35 @@
     <span class="tituloH">HEIMDALL</span>
   
 </mat-toolbar>
+
+<div class="table-container">
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. profess" #input>
+    </mat-form-field>
+  
+    <mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="numero">
+        <mat-header-cell *matHeaderCellDef>Número da Sala</mat-header-cell>
+        <mat-cell *matCellDef="let sala">{{ sala.numero }}</mat-cell>
+      </ng-container>
+  
+      <ng-container matColumnDef="professor">
+        <mat-header-cell *matHeaderCellDef>Nome do Professor</mat-header-cell>
+        <mat-cell *matCellDef="let sala">{{ sala.professor }}</mat-cell>
+      </ng-container>
+  
+      <ng-container matColumnDef="materia">
+        <mat-header-cell *matHeaderCellDef>Matéria</mat-header-cell>
+        <mat-cell *matCellDef="let sala">{{ sala.materia }}</mat-cell>
+      </ng-container>
+  
+      <ng-container matColumnDef="dia">
+        <mat-header-cell *matHeaderCellDef>Dia</mat-header-cell>
+        <mat-cell *matCellDef="let sala">{{ sala.dia | date:'medium' }}</mat-cell>
+      </ng-container>
+  
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+  </div>
