--- a/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.scss
+++ b/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.scss
@@ -33,3 +33,29 @@
   .boxSize{
     width: 33%;
   }
+
+  
+.table-container {
+  width: 90%;
+  margin: auto;
+  margin-top: 1cm;
+  border: 2px solid rgb(0, 0, 0);
+}
+
+mat-table{
+  background-color: #ffd740de;
+}
+
+.mat-mdc-form-field {
+  font-size: 14px;
+  width: 100%;
+  margin-bottom: -20px;
+}
+
+.demo-button-container{
+  position: absolute;
+  margin-left: 2cm;
+}
+.demo-button + .demo-button {
+  margin-left: 8px;
+}
