--- a/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.html
+++ b/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.html
@@ -45,7 +45,7 @@
             </mat-cell>
         </ng-container>
 
-        
+
       <ng-container matColumnDef="numero">
         <mat-header-cell *matHeaderCellDef>Número da Sala</mat-header-cell>
         <mat-cell *matCellDef="let sala">{{ sala.numero }}</mat-cell>
@@ -65,6 +65,15 @@
         <mat-header-cell *matHeaderCellDef>Dia</mat-header-cell>
         <mat-cell *matCellDef="let sala">{{ sala.dia | date:'medium' }}</mat-cell>
       </ng-container>
+
+      <ng-container matColumnDef="remove">
+        <mat-header-cell *matHeaderCellDef>Remove</mat-header-cell>
+        <mat-cell *matCellDef="let sala">
+          <button mat-icon-button (click)="removeRow(sala)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </mat-cell>
+    </ng-container>
   
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
